--- a/style.css
+++ b/style.css
@@ -18,43 +18,34 @@
 }
 
   body {
-    /* background-image:linear-gradient(
-      45deg,
-      #11071f,
-      #3e3061,
-      #b87de9,
-       #f0249f 
-    ); */
-    /* background-size: 400%;
-    background-position: left;
-    transition: background-position 1s;
-    animation: bg-animation 5s infinite alternate; */
+    margin-top:130px;
     background-color: #11071f;
+    font-size: 16px;
     width: 100%;
     color: #fff;
    height: 100vh;
   } 
-  /* @keyframes bg-animation{
-    0%{background-position: left ;}
-    100%{background-position: right ;}
-  } */
 
-  .grid{
-    
-    position: absolute;
-    height: 100%;
+.grid{
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
+    height: 100%;
+    z-index: -1; /* Place it behind the content */
     background-image: 
     linear-gradient(var(--text-color) 0.01em, transparent 0.1em), 
     linear-gradient(90deg, var(--text-color) 0.01em, transparent 0.1em);
     background-size: 6em 6em;
     backdrop-filter: 1rem;
-    opacity: .2;
+    opacity: .1;
     overflow:visible;
+    pointer-events: none;
   }
 section{
-    margin: 100px 200px 100px 200px; 
+    margin: 0 200px; 
 }
+
 h1{
     color: var(--shining-blue);
     margin-bottom: 20px;
@@ -62,52 +53,79 @@ h1{
 }
 /* menu */
 header{
-    /* background: rgba(184, 125, 233, 0.3);
-    backdrop-filter: blur(0.5em); */
-margin: 8px 16px 8px 16px;
+    padding: 32px 40px;
+    width: 100%;
+    z-index: 1;
+    top: 0;
+    position:fixed;
     font-size: 20px;
-    height: 60px;
+    height: 80px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
+}
+.scrolled{
+    /* background: rgba(62, 48, 97, 0.8);
+    backdrop-filter: blur(1em); */
+    /* background: linear-gradient(110deg, #130428 7%, #251043 34%, #38126D 57%, #261045 85%, #190634 100%); */
+    background: rgba(184, 125, 233, 0.3);
+    backdrop-filter: blur(2.5em);
+    transition: all 0.15s cubic-bezier(0.4,0,0.2,1) 0s;
 }
 header #logo{
     text-decoration: none;
-    color: var(--text-color);
+    color: white;
     display: block;
     text-align: center;
 }
 header ul,
 #contact-links{
+    display: flex;
     list-style: none;
 }
 header ul li
 {
     display: inline-block;
     position: relative;
-    width: 100px;
+    padding: 8px 16px;
 }
 header ul li a{
-text-decoration: none;
-color: var(--text-color);
-display: block;
-text-align: center;
+    text-decoration: none;
+    text-align: center;
+    color: var(--text-color);
+    display: block;
+    border-radius: 6px;
+    padding: 8px 16px;
+}
 
+header ul li a:hover{
+    background: var(--shining-blue);
+    transition: all 0.15s cubic-bezier(0.4,0,0.2,1) 0s;
+}
+
+.tools li a{
+    background-color: var(--shining-blue);
+    transition: all 0.15s ease-in-out 0s;
+    font-weight: 800;
+    padding: 8px 8px 6px 8px;
+}
+.tools li a:hover{
+    background-color: #b30c71;
+
+}
+#mobile-menu,.mobile-menu{
+    display: none;
 }
 /* footer */
 footer{
     margin: 0px 200px 100px 200px; 
     bottom: 0;
 }
-footer p{
-    /* font-size: large; */
-}
 footer p a{
     text-decoration: none;
     color: var(--text-color);
 }
 footer p a:hover{
-    /* color: var(--shining-blue); */
     text-decoration: underline;
 }
 footer p a ion-icon{
@@ -123,4 +141,74 @@ footer p a ion-icon{
     text-decoration: none;
     color: var(--shining-blue);
     display: block;
+}
+/* responsive */
+@media (max-width: 992px) {
+    section {
+        margin: 50px 100px 
+    }
+    footer {
+        margin: 0px 100px 100px 100px;
+     }
+}
+@media (max-width: 768px) {
+    #mobile-menu{
+        display:inline-block; 
+    }
+
+.mobile-menu-overlay {
+    position: fixed;
+    top: 80px;
+    left: -100%; 
+    width: 100%;
+    height: 100%;
+    transition: left 0.3s ease;
+    z-index: 999;
+    background: var(--shining-blue);
+    background: hsl(0 0% 100% / 0.1);
+    backdrop-filter: blur(1rem);
+}
+
+.mobile-menu {
+    display: inline;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    list-style: none;
+    padding: 0;
+    text-align: center;
+    /* z-index: 1000; */
+}
+
+.mobile-menu li {
+    margin-bottom: 50px;
+    padding: 8px 16px;
+}
+
+.mobile-menu a {
+    text-decoration: none;
+    font-size: 18px;
+    color: var(--text-color);
+    display: block;
+    border-radius: 6px;
+    padding: 8px 16px;
+    font-size: 20px;
+}
+.mobile-menu a:hover{
+    background: var(--shining-blue);
+    transition: all 0.15s cubic-bezier(0.4,0,0.2,1) 0s;
+}
+.mobile-menu-overlay.active {
+    left: 0;
+}
+    #pc-menu{
+        display: none;
+    }
+    section {
+        margin: 50px 50px
+    }
+    footer {
+        margin: 0px 50px 100px 50px; 
+    }
 }
